--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,9 @@ header {
     align-items: center;
 }
 
+header h1 {
+    font-size: 24px;
+}
 
 header nav ul {
     display: flex;
@@ -38,4 +41,49 @@ header nav ul li {
 
 header nav ul li a {
     text-decoration: none;
+}
+
+header,
+.hero,
+footer {
+    background-color: var(--dark-blue);
+    color: var(--white);
+}
+
+.hero .text h2 {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+header nav ul li a,
+.hero .text p {
+    font-size: 18px;
+    color: var(--grey);
+}
+
+.information h3 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: var(--dark-blue);
+}
+
+button,
+.action .box {
+    color: var(--white);
+    background-color: var(--light-blue);
+    font-size: 18px;
+}
+
+.action .box .box-text h4 {
+    font-size: 24px;
+}
+
+.quote {
+    background-color: var(--grey);
+    color: var(--dark-blue);
+}
+
+.quote p {
+    font-size: 36px;
+    font-style: italic;
 }
