--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     font-family: Roboto, sans-serif;
 }
 
@@ -24,6 +24,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 16px;
 }
 
 header h1 {
@@ -50,9 +51,26 @@ footer {
     color: var(--white);
 }
 
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    gap: 170px;
+}
+
+.hero .text {
+    width: 460px;
+}
+
 .hero .text h2 {
     font-size: 48px;
     font-weight: bolder;
+}
+
+.hero .image-placeholder img {
+    height: 300px;
+    width: 600px;
 }
 
 header nav ul li a,
@@ -72,6 +90,10 @@ button,
     color: var(--white);
     background-color: var(--light-blue);
     font-size: 18px;
+    padding: 8px;
+    width: 130px;
+    border-radius: 8px;
+    margin-top: 16px;
 }
 
 .action .box .box-text h4 {
